--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "webpack-bundle-analyzer": "^3.7.0",
     "webpackbar": "^4.0.0",
     "babel-plugin-import": "^1.13.0",
-    "error-overlay-webpack-plugin": "^0.4.1"
+    "error-overlay-webpack-plugin": "^0.4.1",
+    "redux-devtools-extension": "^2.13.8"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.13",
@@ -41,11 +42,16 @@
     "core-js": "^2.6.10",
     "history": "^4.10.1",
     "react": "^16.13.1",
+    "react-chat-elements": "^10.9.2",
     "react-chat-widget": "^3.0.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
-    "socket.io-client": "^2.3.0"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "prop-types": "^15.7.2"
   }
 }
