--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "clsx": "^1.1.0",
     "core-js": "^2.6.10",
     "history": "^4.10.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-chat-elements": "^10.9.2",
     "react-chat-widget": "^3.0.1",
+    "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
@@ -51,7 +53,6 @@
     "react-scripts": "^3.4.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "prop-types": "^15.7.2"
+    "socket.io-client": "^2.3.0"
   }
 }
